# ReversiPlusPlus

./: CMakeLists.txt  LICENSE  LICENSE.md  Main.cpp  README.md  ReversiBoard.cpp  ReversiBoard.h  console_tests.sh
tests/: classical_console.txt  standard_console_early.txt
